<resources>
    <string name="app_name">Mov2_Mysql</string>
    <string name="titulo">Gestion de empleados</string>
    <string name="numEmp">Escribe Número</string>
    <string name="nombre">Escribe nombre</string>
    <string name="apellidos">Escribe apellidos</string>
    <string name="telefono">Escribe teléfono</string>
    <string name="sueldo">Ingresa correo electrónico</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="lista">Lista</string>
    <string name="titulo2">Lista de Contactos</string>
    <string name="detalle">Detalles de Contactos</string>
    <string name="regreso">Regresar</string>

    <string name="login_title">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="logout">Cerrar Sesión</string>

    <string name="actualizar_lista">Actualizar Lista</string>

    <string name="default_web_client_id">371836062123-pfr8evmfinf4241b0tnbva0o48k77qhb.apps.googleusercontent.com</string>

    <string name="google_sign_in">Continuar con Google</string>
    <string name="google_sign_in_error">Error al iniciar sesión con Google</string>
    <string name="auth_error">Error de autenticación</string>
</resources>